# ml_server/__init__.py
@@ -2,11 +2,14 @@
 ml-server
 """
 
-from ._version import __ml_server__, __version__
-from .serve import start_server
+from ._version import __version__
+from .app import app, MLServer, MLServerRouter
+from .models import MLServerModel
 
 __all__ = [
-    "start_server",
-    "__ml_server__",
     "__version__",
+    "MLServer",
+    "MLServerRouter",
+    "MLServerModel",
+    "app",
 ]
