# ml_server/__main__.py
@@ -2,7 +2,7 @@
 ml-server CLI __main__ wrapper
 """
 
-from ml_server.cli import cli
+from ml_server._cli import cli
 
 if __name__ == "__main__":
     cli()
