# ml_server/_version.py
@@ -5,4 +5,4 @@ __version__ File
 __version__ = "0.1.2"
 __ml_server__ = "ml-server"
 __description__ = "Example ML Server with FastAPI"
-__asgi__ = "ml_server.app:app"
+__asgi__ = "ml_server:app"
