# ml_server/models/bodies.py
@@ -4,10 +4,10 @@ API Request Body Containers
 
 from typing import List, Union
 
-from pydantic import BaseModel
+from ml_server.models import MLServerModel
 
 
-class RequestBody(BaseModel):
+class RequestBody(MLServerModel):
     """
     Data body for the generic `/request` endpoint
     """
@@ -16,7 +16,7 @@ class RequestBody(BaseModel):
     another_example: str
 
 
-class GensimRequest(BaseModel):
+class GensimRequest(MLServerModel):
     """
     Data body for requests to the `/most_similar` endpoint
     """
@@ -26,7 +26,7 @@ class GensimRequest(BaseModel):
     topn: int = 10
 
 
-class SentimentRequest(BaseModel):
+class SentimentRequest(MLServerModel):
     """
     Request Format for the `/sentiment` endpoint
     """
